[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1.11957, -4.86115, 0, 0, 0, 0, 479.603, -0.0778198, 0, 0, 0, 0, 477.212, 717.419, 0, 0, 0, 0, 1.27209, 717.419, 0, 0, 0, 0, -1.11957, -4.86115, 0, 0, 0, 0, 1.27209, -2.46948, 0, 0, 0, 0, -1.11957, 715.027 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array(  )
}

[node name="Main" type="Node"]
script = ExtResource( 4 )
Mob = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 250, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="Path2D" parent="MobPath"]
curve = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" parent="." instance=ExtResource( 3 )]
[connection signal="ready" from="." to="." method="_on_Main_ready"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
